Organised the codebase
Moved code from controllers to their appropriate model
The AJAX response now properly triggers the desired Bootstrap alert

--- a/templates/author/read.html.twig
+++ b/templates/author/read.html.twig
@@ -19,6 +19,7 @@
 				<tr>
 				</tr>
 			</tbody>
-		</table>  
+		</table> 
+  		{% include 'post/_posts_table.html.twig' %}
 	</div>
 {% endblock %}
